@@ -1,0 +1,26 @@
+.. header::
+    
+   ###Page###
+
+This should be page 1
+
+.. raw:: pdf
+
+   PageBreak
+   SetPageCounter 4
+   
+This should be page 4
+
+.. raw:: pdf
+
+   PageBreak
+   SetPageCounter 2 lowerroman
+
+This should be page ii
+
+.. raw:: pdf
+
+   PageBreak
+
+
+This should be page iii
